# online-resources-to-stay-updated

./: .bumpversion.cfg  .gitignore  AltovaSoftwareData.py  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYRIGHT  README.md  Web.py  data.xml  data.xsd  landing_pages.xml  landing_pages.xsd  open.py  open_test.py  requirements.txt  url_opener.py  websites.xml  websites.xsd
.github/workflows/: python-app.yml
data/: data.xml  data.xsd
tests/: test_data.xml  test_url_opener.py
webpage-opener/: CMakeLists.txt
webpage-opener/includes/: logger.hpp  resources.h  webpage-opener.hpp
webpage-opener/resources/: data.xsd  resources.rc
webpage-opener/src/: logger.cpp  webpage-opener.cpp
webpage-opener/tests/: test_main.cpp  test_openURLs.cpp  test_webpage_opener.cpp
